<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guiden"
                android:textColor="@color/colorFacebook"
                />

            <EditText
                android:id="@+id/editDiaChiGiaoHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diachi"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giaongay"
                android:textSize="15sp"
                android:textColor="@color/colorFacebook"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorBackgroundTrangChu"
            />

        <!--  Danh sách các món ăn được đặt  -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMonAnDuocDat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            >
        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tongsosanpham"
                android:layout_marginRight="3dp"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/txtTongSoLuongSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txtTongTienTruoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="190.000đ"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phigiaohang"
                android:textSize="16sp"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mienphi"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phidichvu"
                android:textSize="16sp"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.000đ"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBackgroundTrangChu"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tongcong"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/txtTongTienSau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="400.000đ"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorBackgroundTrangChu"
            />

        <include layout="@layout/layout_phuongthucthanhtoan" />


        <Button
            android:id="@+id/btnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanhtoan"
            android:background="@drawable/button_radius_5dp"
            android:drawableTop="@drawable/local_shipping"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

