<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_700"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingRight="12dp"
            >

            <TextView
                android:id="@+id/txtHuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huy"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngonngu"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/txtChonNgonNgu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xong"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/vietnamese_textview"
                android:text="@string/tiengviet"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/vietnamese_checkbox"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/english_textview"
                android:text="@string/tienganh"
                android:layout_alignParentLeft="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <CheckBox
                android:id="@+id/english_checkbox"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
