<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!--   Layout quên mật khẩu 1     -->
    <LinearLayout
        android:id="@+id/layoutKhoiPhucMK1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundDangNhap"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/khoiphucmatkhau"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/chuoikhoiphucmatkhau"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edEmailKP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/btnGuiEmailKP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawablePadding="10dp"
            android:drawableTint="@color/purple_700"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/guimail"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/hoac"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white" />
        </LinearLayout>

        <EditText
            android:id="@+id/edPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/sodienthoai"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white" />

        <Button
            android:id="@+id/btnGuiOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawablePadding="10dp"
            android:drawableTint="@color/purple_700"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/guiotp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/chuoithanhvien"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtDangKyKP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dangkymoi"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <!--   Layout quên mật khẩu 2     -->
    <LinearLayout
        android:id="@+id/layoutKhoiPhucMK2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundDangNhap"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/khoiphucmatkhau"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="OTP"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            />

        <Button
            android:id="@+id/btnXacNhanOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawablePadding="10dp"
            android:drawableTint="@color/purple_700"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/xacnhan"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <!--   Layout nhập mật khẩu mới     -->
    <LinearLayout
        android:id="@+id/layoutNhapMatKhauMoi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundDangNhap"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/khoiphucmatkhau"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/matkhau"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            />

        <EditText
            android:id="@+id/edNhapLaiMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/nhaplaimatkhau"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            />

        <Button
            android:id="@+id/btnXacNhanMatKhauMoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawablePadding="10dp"
            android:drawableTint="@color/purple_700"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/xacnhan"
            android:textColor="@color/white"
            />

    </LinearLayout>

</RelativeLayout>